--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/notifications": "^7.16.3",
     "@tabler/icons-react": "^3.30.0",
     "axios": "^1.7.9",
+    "framer-motion": "^12.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
